# passport

./: Cargo.toml  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
build-aux/: net.bloerg.Passport.Devel.json
data/: net.bloerg.Passport.desktop.in.in  net.bloerg.Passport.gschema.xml.in  net.bloerg.Passport.metainfo.xml.in.in  resources.gresource.xml
data/resources/: style.css
data/resources/ui/: dialogs.ui  shortcuts.ui  window.ui
po/: POTFILES.in
src/: application.rs  main.rs  storage.rs  window.rs
